# ciaaw

./: .gitignore  API-doc-FORD-file.md  CHANGELOG.md  INSTALL.rst  LICENSE  Makefile  README.md  README.rst  REFERENCES.bib  REFERENCES.md  VERSION  build.sh  ciaaw.rsp  configure.sh  fpm.toml  make.in
app/: main.f90
data/: Makefile  README.md  ice_2013.toml  ice_2013.txt  naw.csv  naw_2020.toml  naw_2020.txt  saw_2021.toml  saw_2021.txt
doc/: Makefile  ciaaw.1  ciaaw.1.prep  ciaaw.1.rst  ciaaw.1.txt  ciaaw.3  ciaaw.3.prep  ciaaw.3.rst  ciaaw.3.txt  ciaaw_get_version.3  ciaaw_get_version.3.txt  ciaaw_saw.3  ciaaw_saw.3.txt  ciaaw_saw.md  index.md  references.bib  references.md
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation/: Makefile
example/: example.c  example.f90  example.py  example.txt  example_in_c.c  example_in_c.txt  example_in_f.f90  example_in_py.py
include/: Makefile  cciaaw.h  cciaaw_saw.h  cciaaw_saw_2021.h  cciaaw_saw_type.h  cciaaw_version.h  ciaaw.h  ciaaw_saw.h  ciaaw_saw_2021.h  ciaaw_saw_dtypes.h  ciaaw_saw_latest.h  ciaaw_saw_type.h  ciaaw_version.h  header.h.start
media/: Makefile  make.in
py/: MANIFEST.in  Makefile  README.md  VERSION  _README.md  pyproject.toml  setup.py
py/src/pyciaaw/: Makefile  __init__.py  _ciaaw.c  _version.c  ciaaw.h  ciaaw.py  cpy_ciaaw.c  cpy_ciaaw_saw_2021.c  version.py
py/test/: test_version.py  tests.py
pywrapper/: INSTALL.rst  MANIFEST.in  Makefile  README.md  README.rst  build.bat  build.sh  configure.sh  pyproject.toml  run.py  setup.py
pywrapper/pyciaaw/: Makefile  __init__.py  ciaaw_saw.c  cpy_ciaaw_saw.c  version.py
pywrapper/pyciaaw/tests/: test_saw.py
pywrapper/src/pyciaaw/: Makefile  __init__.py  ciaaw.h  ciaaw_saw.h  ciaaw_version.h  cpy_ciaaw_saw_2021.c  cpy_ciaaw_saw_latest.c  cpy_ciaaw_version.c  libciaaw.dylib
pywrapper/test/: test_saw.py  tests.py
pywrapper/tests/: test_saw.py
scripts/: concatex.sh  f2txt.sh  gen_ast.py  gen_capi.py  gen_cpython.py  gen_headers.py  gen_src.py  py2txt.sh
sphinx/: conf.py  index.rst
src/: Makefile  capi.f90  capi_saw_2021.f90  capi_saw_type.f90  capi_version.f90  cciaaw_saw_type.f90  cciaw_version.f90  ciaaw.f90  ciaaw_api.f90  ciaaw_capi.f90  ciaaw_common.f90  ciaaw_getters.f90  ciaaw_ice.f90  ciaaw_naw.f90  ciaaw_pte.f90  ciaaw_saw.f90  ciaaw_saw_2021.f90  ciaaw_saw_capi.f90  ciaaw_saw_dtypes.f90  ciaaw_saw_latest.f90  ciaaw_saw_type.f90  ciaaw_types.f90  ciaaw_version.f90  ciaaw_version_capi.f90  test_fspx.f90  test_fspx.txt
srcgen/: Makefile  c_code.f90  (+7 more)
(+597 files in other folders)
